--- a/a/ad/ado/adonion.com.html
+++ b/a/ad/ado/adonion.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the adonion.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120170550id_/http%3A//www.adonion.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adonion.com privacy policy that was archived on 2017-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170421212142id_/http%3A//adonion.com/privacy_policy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" style=""><head><script async="" src="http://api.flickr.com/services/feeds/photos_public.gne?id=37321137@N03&amp;format=json&amp;jsoncallback=jQuery190040001810400474125_1582141647150&amp;_=1582141647151"></script>
+<!DOCTYPE html><html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" style=""><head><script async="" src="http://api.flickr.com/services/feeds/photos_public.gne?id=37321137@N03&amp;format=json&amp;jsoncallback=jQuery19008830178398092996_1582141647053&amp;_=1582141647054"></script>
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic" rel="stylesheet" type="text/css">
 <meta charset="utf-8">
 
@@ -158,7 +158,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-6">
               <p style="font-size:20px;"> <i class="fa fa-facebook"></i> <i class="fa fa-twitter"></i> <i class="fa fa-google-plus"></i> </p>
-              Copyright @ 2008 - 2016 <a href="http://www.adonion.com">Adonion.com</a>. All rights reserved. </div>
+              Copyright @ 2008 - 2017 <a href="http://www.adonion.com">Adonion.com</a>. All rights reserved. </div>
             <div class="text-right col-sm-6 col-md-6"> <A href="#">About Us </A> <A href="#">Privacy Policy </A> <A href="#"> Agreement</A> </div>
           </div>
 -->
@@ -167,7 +167,7 @@
         <div class="row">
         <div class="col-sm-12 col-md-12">
                 <center>
-                Copyright @ 2008 - 2016 <a href="http://www.adonion.com">Adonion.com.</a> All rights reserved.  <a href="privacy_policy.php">Privacy Policy </a> |  <a href="agreement.php">User Agreement</a>
+                Copyright @ 2008 - 2017 <a href="http://www.adonion.com">Adonion.com.</a> All rights reserved.  <a href="privacy_policy.php">Privacy Policy </a> |  <a href="agreement.php">User Agreement</a>
                   </center>
             </div>
         
@@ -323,7 +323,7 @@ var yuSite = 3;var yuType = 'view';var yuEscape = window.encodeURIComponent || e
 var yuUrl = yuEscape(document.location.href);
 document.write(unescape("%3Cscript src='" + yuBaseURL + "js/track.js' type='text/javascript'%3E%3C/script%3E"));
 document.write(unescape("%3Cscript src='" + yuBaseURL + "track.php?idsite="+yuSite+"&type="+yuType+"&url="+yuUrl+"&rand="+Math.random()+"' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://track.visitorpath.com/js/track.js" type="text/javascript"></script><script src="https://track.visitorpath.com/track.php?idsite=3&amp;type=view&amp;url=https://web.archive.org/web/20161120170550id_/http%3A//www.adonion.com/privacy_policy.php&amp;rand=0.17060919114150996" type="text/javascript"></script>
+</script><script src="https://track.visitorpath.com/js/track.js" type="text/javascript"></script><script src="https://track.visitorpath.com/track.php?idsite=3&amp;type=view&amp;url=https://web.archive.org/web/20170421212142id_/http%3A//adonion.com/privacy_policy.php&amp;rand=0.6148512268169062" type="text/javascript"></script>
 <!-- End View Tracking -->
 
 <!--
