--- a/k/ki/kis/kissmetrics.com.html
+++ b/k/ki/kis/kissmetrics.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the kissmetrics.com privacy policy that was archived on 2016-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161231073200id_/https%3A//www.kissmetrics.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kissmetrics.com privacy policy that was archived on 2017-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170421212355id_/https%3A//www.kissmetrics.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html data-placeholder-focus="false" class="  js no-touch draganddrop rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio svg inlinesvg svgclippaths wf-inactive"><head>
+<!DOCTYPE html><html data-placeholder-focus="false" class=" wf-loading js no-touch draganddrop rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio svg inlinesvg svgclippaths"><head>
   <title>Privacy Policy | Kissmetrics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <meta name="description" content="Giving you the knowledge you need to make better decisions. Kissmetrics is a revolutionary person-based analytics platform for your whole team. Get product, sales, marketing, customer support working together to improve the metrics that matter.">
@@ -9,7 +9,7 @@
   <link rel="canonical" href="https://www.kissmetrics.com/privacy/">
   <link href="/assets/application-8cefb2e55e16df534562cccac53b72ac.css" media="all" rel="stylesheet">
   <meta content="authenticity_token" name="csrf-param">
-<meta content="GGWrKex7NNnsvdephM0zYU7JFnLmYqFKhOJdrqT0v6E=" name="csrf-token">
+<meta content="Yj0ZSNvdEu3FiL1UwfwzyFWJaKubGhjK6Y0AjBR4h9M=" name="csrf-token">
 
   <!-- Favicons -->
 
@@ -474,7 +474,7 @@ f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertB
     </p>
 
     <h3 id="optout" name="optout">Opt-in/Opt-out of Kissmetrics Tracking</h3>
-    <form accept-charset="UTF-8" action="/user-privacy/toggle" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="GGWrKex7NNnsvdephM0zYU7JFnLmYqFKhOJdrqT0v6E="></div>
+    <form accept-charset="UTF-8" action="/user-privacy/toggle" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="Yj0ZSNvdEu3FiL1UwfwzyFWJaKubGhjK6Y0AjBR4h9M="></div>
       <p>
         <input id="opt_out" name="opt_out" type="checkbox" value="yes">
         <label for="opt_out">Yes, I would like to opt out of Kissmetrics tracking.</label>
