--- a/a/al/all/allanimemovies.com.html
+++ b/a/al/all/allanimemovies.com.html
@@ -1,36 +1,87 @@
-<!--The following is the downloaded HTML source of the allanimemovies.com privacy policy that was archived on 2013-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130604005859id_/http%3A//www.allanimemovies.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allanimemovies.com privacy policy that was archived on 2017-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170421214701id_/http%3A//www.allanimemovies.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
+<!DOCTYPE html><html><head>
+<script src="https://js-agent.newrelic.com/nr-1016.min.js"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"50913b7532","applicationID":"7584099","transactionName":"e1xWR0VXCF9WQhdGWF9WSxxHSg1FUlNB","queueTime":0,"applicationTime":18,"agent":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[(new Date).getTime()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=NREUM;"undefined"==typeof window.newrelic&&(newrelic=f);var s=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],l="api-",p=l+"ixn-";a(s,function(e,t){f[t]=o(l+t,!0,"api")}),f.addPageAction=o(l+"addPageAction",!0),f.setCurrentRouteName=o(l+"routeName",!0),t.exports=newrelic,f.interaction=function(){return(new r).get()};var d=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(p+"tracer",[Date.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[Date.now(),r,o],n),o)try{return t.apply(this,arguments)}finally{c.emit("fn-end",[Date.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){d[t]=o(p+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o){if(!p.aborted){e&&e(n,r,o);for(var i=t(o),a=v(n),u=a.length,c=0;c<u;c++)a[c].apply(i,r);var f=s[w[n]];return f&&f.push([y,n,r,i]),i}}function d(e,t){b[e]=v(e).concat(t)}function v(e){return b[e]||[]}function g(e){return l[e]=l[e]||o(n)}function m(e,t){f(e,function(e,n){t=t||"feature",w[n]=t,t in s||(s[t]=[])})}var b={},w={},y={on:d,emit:n,get:g,listeners:v,context:t,buffer:m,abort:a,aborted:!1};return y}function i(){return new r}function a(){(s.api||s.feature)&&(p.aborted=!0,s=p.backlog={})}var u="nr@context",c=e("gos"),f=e(2),s={},l={},p=t.exports=o();p.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!h++){var e=y.info=NREUM.info,t=l.getElementsByTagName("script")[0];if(setTimeout(f.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return f.abort();c(b,function(t,n){e[t]||(e[t]=n)}),u("mark",["onload",a()],null,"api");var n=l.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===l.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=e("ee"),s=window,l=s.document,p="addEventListener",d="attachEvent",v=s.XMLHttpRequest,g=v&&v.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:v,REQ:s.Request,EV:s.Event,PR:s.Promise,MO:s.MutationObserver},e(1);var m=""+location,b={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1016.min.js"},w=v&&g&&g[p]&&!/CriOS/.test(navigator.userAgent),y=t.exports={offset:a(),origin:m,features:{},xhrWrappable:w};l[p]?(l[p]("DOMContentLoaded",i,!1),s[p]("load",r,!1)):(l[d]("onreadystatechange",o),s[d]("onload",r)),u("mark",["firstbyte",a()],null,"api");var h=0},{}]},{},["loader"]);</script>
 <title>All Anime Movies</title>
-<link href="/assets/site/allanimemovies.com.css" media="all" rel="stylesheet" type="text/css">
-<meta content="authenticity_token" name="csrf-param">
-<meta content="pouTGe0vQChc8p/oMNuKk+gk49Chi5InOXIZC3YlliA=" name="csrf-token">
-</head>
+<link rel="stylesheet" media="all" href="/assets/site/allanimemovies.com-1b06f897f9740709738ae8ba798e38fb.css">
+<script src="/assets/application-182d7f76770ff5d09ebc5efa16505f6c.js"></script><style type="text/css">.dropdown-submenu:hover>.dropdown-menu{display:none}</style>
+<meta name="csrf-param" content="authenticity_token">
+<meta name="csrf-token" content="nxmB6Qkpp63aptsnoH463UL/8VKI9PxE822hg+HmbDaWXEolpf/iKhH017FtovkpuHyfqQ6WEEoNhvuXd6DWvA==">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<link rel="stylesheet" type="text/css" href="https://web.archive.org/assets/join.css"></head>
 <body class="static">
-<div class="gradient-background"></div>
-<div id="sticky-header">
-<div id="top-header">
-<div id="search-form">
-<form accept-charset="UTF-8" action="/search" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
-<div id="search-fields">
-<input class="input" id="search" name="search" placeholder="Search" size="22" type="text">
+<div class="navbar">
+<button class="navbar-toggle collapsed" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<div class="navbar-brand">
+<a href="/"><img class="logo" src="http://cdn.spacash.com/assets/sites/allanimemovies.com/en/logo.png" alt="Logo"></a>
 </div>
-</form>
-
-</div>
-
-<ul id="nav">
-<li class="login"><a href="/login">Sign In</a></li>
-<li class="signup"><a href="/users/sign_up">Sign Up</a></li>
+<div class="collapse navbar-collapse navbar-responsive-collapse">
+<ul class="nav navbar-nav nav-main">
+<li>
+<a href="/dvds">Popular Movies</a>
+</li>
+<li class="dropdown">
+<a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#">Categories
+<b class="caret"></b>
+</a><ul class="dropdown-menu">
+<li>
+<a href="/studios"><strong>Studios</strong>
+</a></li>
+<li>
+<a href="/stars"><strong>Stars</strong>
+</a></li>
+<li><a href="/tags/ass">Ass</a></li>
+<li><a href="/tags/bisexual">Bisexual</a></li>
+<li><a href="/tags/big-cocks">Big Cocks</a></li>
+<li><a href="/tags/blonde">Blonde</a></li>
+<li><a href="/tags/brunette">Brunette</a></li>
+<li><a href="/tags/big-tits">Big Tits</a></li>
+<li><a href="/tags/brunette">Brunette</a></li>
+<li><a href="/tags/hentai">Hentai</a></li>
+<li><a href="/tags/ebony">Ebony</a></li>
+<li><a href="/tags/fetish">Fetish</a></li>
+<li><a href="/tags/french">French</a></li>
+<li><a href="/tags/handjob">Handjob</a></li>
+<li><a href="/tags/gay">Gay</a></li>
+<li><a href="/tags/gang-bang">Gang Bang</a></li>
+<li><a href="/tags/granny">Granny</a></li>
+<li><a href="/tags/japan">Japan</a></li>
+<li><a href="/tags/interracial">Interracial</a></li>
+<li><a href="/tags/italian">Italian</a></li>
+<li><a href="/tags/latina">Latina</a></li>
+<li><a href="/tags/lesbian">Lesbian</a></li>
+<li><a href="/tags/mature">Mature</a></li>
+<li><a href="/tags/mature">Mature</a></li>
+<li><a href="/tags/milf">Milf</a></li>
+<li><a href="/tags/teen">Teen</a></li>
+<li><a href="/tags/threesome">Threesome</a></li>
+<li><a href="/tags/shemale">Shemale</a></li>
+<li><a href="/tags/voyeur">Voyeur</a></li>
+<li>
+<a href="/tags"><strong>More...</strong>
+</a></li>
 </ul>
-<div id="logo">
-<a href="http://allanimemovies.com/"><img alt="Logo" class="logo" src="http://cdn.spacash.com/assets/sites/allanimemovies.com/en/logo.png"></a>
+</li>
+<li><a alt="Sexting App" title="Sexting App" href="https://www.meeter.com">Sexting App</a></li>
+
+</ul>
+<ul class="nav navbar-nav pull-right">
+<li>
+<a href="/join"><button class="btn btn-primary">Instant Acccess</button>
+</a></li>
+<li>
+<a href="/users/sign_in"><button class="btn btn-default">Login</button>
+</a></li>
+</ul>
 </div>
 </div>
-</div>
-<div id="container">
-<section>
+<div class="container">
 <h2>Privacy Policy</h2>
 <p>Keeping you privacy is very important and is protected while using our Site. Please make sure to read the Site's Terms &amp; Conditions as well.</p>
 <p>When you chose to sign-up as a service user of this site, you will be required to provide certain information such as your name, email address, home address and banking information. We also collect your IP address and keep the username and password you use to access our site.</p>
@@ -42,48 +93,62 @@
 <p>We may use the information collected to improve our marketing campaigns, contents and products. We may also send periodic information such as newsletters to our consenting users via email.</p>
 <p>We may disclose your information to affiliated sites and upon request of law enforcement agencies in order to enforce intellectual property or other rights. We may further disclose your personal information to any third party should there be a well founded accusation or suspicion you infringed the law through our services.</p>
 <p>If you want to update or delete your information from our database, please contact our Customer Service team at <a href="mailto:support@spanetworks.com">support@spanetworks.com</a>.</p>
-</section>
 
 </div>
-<div id="footer">
-<div class="classicFooter">
-<ul>
-<li><a href="/login">Members</a></li>
+
+<div class="footer">
+<div class="container">
+<div class="row">
+<div class="col">
+<ul class="list-inline">
+<li><a href="/users/sign_in">Members</a></li>
 <li><a href="/dvds">Browse</a></li>
-<li><a href="/cancel_suscription.php">Help</a></li>
-<li><a href="/support_terms.php">Terms</a></li>
+<li><a href="/help">Help</a></li>
+<li><a href="/terms">Terms</a></li>
 <li><a href="/privacy">Privacy</a></li>
-<li><a href="http://www.spacash.com" id="affiliateProgramLink">Affiliates</a></li>
+<li><a id="affiliateProgramLink" href="https://web.archive.org/web/20160905214239/http://www.spacash.com/?undefined">Affiliates</a></li>
 </ul>
-<p><a href="/2257">18 USC 2257 Record-Keeping Requirements Compliance Statement</a></p>
+<p>
+<a href="/2257">18 USC 2257 Record-Keeping Requirements Compliance Statement</a>
+<br>
+allanimemovies.com is owned and operated by Live Interactive Chipre LTD, Cyprus.
+</p>
 </div>
+</div>
+</div>
+</div>
+<div class="modal fade non-logged" id="joinModal">
+<div class="modal-dialog">
+<div class="modal-header">
+<button aria-hidden="true" class="close" data-dismiss="modal" type="button">
+×
+</button>
+<h1>
+Get immediate access to watch all movies.
+</h1>
+</div>
+<div class="modal-body">
+<p class="lead">Get Immediate and Unrestricted access.</p>
+<div class="join-lightbox-js-code paymentBoxPlacementModal" data-domain="allanimemovies.com"><div class="spacash-loading-wrapper"><div class="spacash-loading"><div class="spacash-spinner"><div class="spacash-mask"><div class="spacash-maskedCircle"></div></div></div></div></div></div>
+</div>
+</div>
+</div>
+
 <script>
-  //<![CDATA[
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-34873299-1']);
-    _gaq.push(['_setCustomVar', 1, 'Site', 'allanimemovies.com']);
-    _gaq.push(['_trackPageview']);
-    
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  //]]>
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-34873299-1']);
+  _gaq.push(['_setCustomVar', 1, 'ParentSite', 'allanimemovies.com']);
+  _gaq.push(['_setCustomVar', 1, 'CurrentSite', 'allanimemovies.com']);
+  _gaq.push(['_setCustomVar', 1, 'CurrentHost', 'allanimemovies.com']);
+  _gaq.push(['_trackPageview']);
+  
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
 </script>
 
 
-</div>
-<script src="/assets/application-1f02a4f34cc4b0530d2f66ddaa07b066.js" type="text/javascript"></script>
-<script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
-NREUMQ.push(["load",new Date().getTime()]);
-var e=document.createElement("script");
-e.type="text/javascript";e.async=true;e.src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js";
-document.body.appendChild(e);
-if(NREUMQ.a)NREUMQ.a();
-};
-NREUMQ.a=window.onload;window.onload=NREUMQ.f;
-};
-NREUMQ.push(["nrfj","beacon-1.newrelic.com","fe25f28e0c",506891,"dV1WRhZWX1tQRB0UU1FXSx0XUVxA",0,44,new Date().getTime(),"","","","",""])</script>
 
-<script type="text/javascript" async="" src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js"></script></body></html>
+</body></html>
